--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,54 @@ body {
 a {
   color: black
 }
+
+.choreFormMain {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+.choreFormHolderDiv {
+  width: 60%;
+}
+
+.choreInput {
+  height: 50px;
+  width: 100%;
+  border-radius: 5px;
+  padding-left: 5px;
+}
+
+.choreFormButtons {
+  margin-top: 5px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.GhostRacerButtonsMainDiv {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+
+
+
+.timerDiv {
+  font-size: 36px;
+  border-radius: 10px;
+  background-color: rgba(237, 15, 2, 0.9);
+  width: 40%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.checkpointsMainDiv {
+  height: 500px;
+}
