--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,10 @@ a {
   color: black;
   transition: .55s color; 
   font-size: 18px;
-  padding: 5px
 }
 a:hover {
- color: black;
- background-color: darkorange;
- border-radius: 5px;
+ color: orange;
+ border-radius: 10px;
  text-decoration: none;
 }
 
@@ -94,4 +92,31 @@ a:hover {
 
 .checkpoint {
 
+}
+
+.emptyDivFadeIn {
+  height: 30px;
+  margin: 10px;
+  opacity: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
+}
+.emptyDivFadeOut {
+  height: 30px;
+  margin: 10px;
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
+}
+
+.currentChoreAnnouncement {
+  font-size: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+  background-color: rgba(237, 15, 2, 0.9);
+  border-radius: 10px;
 }
